--- a/Homework/css/style.css
+++ b/Homework/css/style.css
@@ -4,8 +4,33 @@ body{ background-image:url(/Images/background.jpg);}
 
 h1{ color:white; }
 h2{ color:white; }
-*/
+
 p { color:aqua;  }
 #top-header{font-family:monospace ,sans-serif;}
 #top-row{padding: 0em;
-    background-color: aqua}
+  background-color: aqua}
+*/
+header{
+    padding: 0em;
+    background-color: aqua;
+}
+
+#top-header{
+    font-family: monospace, sans-serif;
+}
+
+p{
+    color:aqua;
+}
+
+h1{
+    color:white;
+}
+
+h2{
+    color:white;
+}
+
+body{
+    background-image: url(/Images/background.jpg)
+}
