--- a/Homework/css/style2.css
+++ b/Homework/css/style2.css
@@ -1,5 +1,5 @@
 header{ font-family:monospace ,sans-serif;
-padding: 10em;
+padding: 0em;
 background-color: aqua;
 }
 
@@ -16,5 +16,5 @@ color:white;
 }
 
 body{
-background-image: url(/Images/background.jpg);
+background-image: url(/Images/2016_pagani_huayra_bc_13_2560x1440.jpg);
 }
