--- a/Homework/css/style2.css
+++ b/Homework/css/style2.css
@@ -16,5 +16,5 @@ color:white;
 }
 
 body{
-background-image: url(/Images/2016_pagani_huayra_bc_13_2560x1440.jpg);
+background-image: url(/Images/background.jpg);
 }
