--- a/Homework/css/style3.css
+++ b/Homework/css/style3.css
@@ -16,4 +16,4 @@ color:white;
 }
 
 body{
-background-image: url(/Images/wallup-24897.jpg);
+background-image: url(/Images/sharks_alt_ice_wallpaper_by_devinflack-d3bqu72.png);
