--- a/Homework/css/style2.css
+++ b/Homework/css/style2.css
@@ -7,13 +7,11 @@ p{ font-size: 12pt;
 color:aqua;
 }
 
-h1{
+h1,h2 {
 color:white;
 }
 
-h2{
-color:white;
-}
+
 
 body{
 background-image: url(/Images/background.jpg);
