--- a/Homework/css/style3.css
+++ b/Homework/css/style3.css
@@ -7,13 +7,11 @@ p{
 color:aqua;
 }
 
-h1{
+h1,h2{
 color:white;
 }
 
-h2{
-color:white;
-}
+
 
 body{
     background-image: url(/Images/sharks_alt_ice_wallpaper_by_devinflack-d3bqu72.png);}
