--- a/Homework/css/style3.css
+++ b/Homework/css/style3.css
@@ -14,4 +14,4 @@ color:white;
 
 
 body{
-    background-image: url(/Images/sharks_alt_ice_wallpaper_by_devinflack-d3bqu72.png);}
+    background-image: url(/Images/Site%25203/sharks_alt_ice_wallpaper_by_devinflack-d3bqu72.png);}
