--- a/Homework/css/style.css
+++ b/Homework/css/style.css
@@ -14,5 +14,5 @@ h1,h2 {
 
 
 body {
-    background-image: url(/Images/site%2520one/background.jpg);
+    background-image: url(/Images/background.jpg);
 }
