--- a/Homework/css/style2.css
+++ b/Homework/css/style2.css
@@ -14,5 +14,5 @@ color:white;
 
 
 body{
-background-image: url(/Images/site%2520two/background.jpg);
+background-image: url(/Images/background.jpg);
 }
