--- a/Homework/css/style3.css
+++ b/Homework/css/style3.css
@@ -14,4 +14,4 @@ color:white;
 
 
 body{
-    background-image: url(/Images/zoui-saldana-i-sam-uartingtan-v-avatar.jpg);}
+    background-image: url(/Images/background.jpg);}
