--- a/Testing/css/html-css.css
+++ b/Testing/css/html-css.css
@@ -1,3 +1,15 @@
-*{ 
-box-sizing: border-box;
+*:before,
+*:after {
+    box-sizing: border-box;
+}
+
+body {
+    background-color: aqua;
+    margin: 0;
+    padding: 0;
+}
+
+#wrapper {
+    background-color: #fff;
+    width: 100%;
 }
