--- a/Homework/css/style2.css
+++ b/Homework/css/style2.css
@@ -1,18 +1,23 @@
-header{ font-family:monospace ,sans-serif;
-padding: 0em;
-background-color: aqua;
+header {
+    font-family: monospace, sans-serif;
+    padding: 0em;
+    background-color: aqua;
 }
 
-p{ font-size: 12pt;
-color:aqua;
+p {
+    font-size: 12pt;
+    color: aqua;
 }
 
-h1,h2 {
-color:white;
+h1,
+h2 {
+    color: white;
 }
 
+.nav li >a {
+    text-decoration: none;
+}
 
-
-body{
-background-image: url(/Images/background.jpg);
+body {
+    background-image: url(/Images/background.jpg);
 }
