--- a/Homework/css/style.css
+++ b/Homework/css/style.css
@@ -14,8 +14,33 @@ h2 {
     color: white;
 }
 
-.nav li >a {
+footer {
+    padding: 2em;
+    background-color: aqua;
+}
+
+.id li > a {
     text-decoration: none;
+}
+
+a:link {
+    color: hotpink;
+}
+
+a:visited {
+    color: purple;
+}
+
+a:focus {
+    color: aqua;
+}
+
+a:hover {
+    color: aqua;
+}
+
+a:active {
+    color: fuchsia
 }
 
 body {
