--- a/Homework/css/html-css.css
+++ b/Homework/css/html-css.css
@@ -10,6 +10,7 @@
 body {
     background-color: aqua;
     font-family: fantasy;
+    color: white;
     margin: 0;
     padding: 0;
     font-size: 15px;
