--- a/Homework/css/html-css.css
+++ b/Homework/css/html-css.css
@@ -8,9 +8,9 @@
 }
 
 body {
-    background-color: aqua;
+    background-color: cornflowerblue;
     font-family: fantasy;
-    margin: 0;
+    margin: 1em;
     padding: 0;
     font-size: 15px;
 }
@@ -42,15 +42,31 @@ body {
 }
 
 #hi-lo {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+
+/*
+#hi-lo {
     display: flex;
     display: inline-block;
     align-content: space-around;
     list-style-type: none;
     width: 15%;
     font-family: monospace, monospace;
-}
+}*/
 
 #hi-lo>li {
     display: inline-block;
-    width: 40%;
+    width: 25%;
+    /* Browser rounding errors force this down */
+    text-align: center;
+    vertical-align: top;
+}
+
+#hi-lo #conditions {
+    width: 50%;
+    /* Browser rounding errors force this down */
 }
