--- a/Homework/css/html-css.css
+++ b/Homework/css/html-css.css
@@ -24,6 +24,15 @@ body {
     justify-content: center;
 }
 
+#page-nav ul {
+    display: none;
+}
+
+#page-nav:before {
+    content: "Menu";
+    display: block;
+}
+
 .text {
     display: flex;
     justify-content: center;
@@ -60,13 +69,13 @@ body {
 
 #hi-lo>li {
     display: inline-block;
-    width: 25%;
+    width: 24%;
     /* Browser rounding errors force this down */
     text-align: center;
     vertical-align: top;
 }
 
 #hi-lo #conditions {
-    width: 50%;
+    width: 49%;
     /* Browser rounding errors force this down */
 }
