--- a/homework/css/style.css
+++ b/homework/css/style.css
@@ -19,13 +19,14 @@ h2 {
     list-style-type: none;
 }
 
-footer {
+
+/*footer {
     bottom: 0;
     width: 100%;
     position: fixed;
     padding: 2em;
     background-color: hotpink;
-}
+}*/
 
 .id li > a {
     text-decoration: none;
