--- a/homework/css/style.css
+++ b/homework/css/style.css
@@ -81,7 +81,7 @@ body {
 .container {
     align-items: center;
     align-self: center;
-    background: url(/images/background.jpg) center center;
+    background: url(/images/waterfall-norway.jpg) center center;
     border-radius: 50%;
     display: flex;
     flex-direction: column;
