--- a/homework/css/style.css
+++ b/homework/css/style.css
@@ -70,7 +70,7 @@ body {
 
 body {
     align-items: center;
-    background: url(/images/stary.jpg);
+    background: url(/images/maxresdefault.jpg);
     display: flex;
     font-family: 'Raleway', sans-serif;
     flex-direction: column;
