--- a/homework/javascript/intro-jquery-files/Lesson4/css/style.css
+++ b/homework/javascript/intro-jquery-files/Lesson4/css/style.css
@@ -262,7 +262,9 @@ body {
     height:30px;
     background:rgba(0, 167, 255, 0.86);
 }
-.list{padding-top: 30px;}
+.list{
+    text-decoration: none;
+    padding-top: 30px;}
 .footer h5 {
     position: absolute;
     top: 8px;
